--- a/DSA Document/index.html
+++ b/DSA Document/index.html
@@ -31,8 +31,8 @@
         <div class="tab page mainpage" style="width:50%;">
           <p style="font-size:40px; color:rgb(193, 238, 71);">Documentation : DSACPP</p>
 
-          <div class="card" data-test="1" style="background-image:linear-gradient(to bottom, rgb(99, 11, 150), rgb(72, 7, 110));">
-              <span style="margin:auto 0; font-size:30px; color:rgb(106, 211, 243);">Tuple</span>
+          <div class="card" data-test="1" style="background-image:linear-gradient(to bottom, #bb85be, #b651bd, #c71ad3);">
+              <span style="margin:auto 0; font-size:30px; color:#fad0fe;">Tuple</span>
               <img class="button-show" src="Picture/flicker.png" style="height:40px; width:40px;"><br>
 
               <div class="box-show hidden">
@@ -45,8 +45,8 @@
               </div>
           </div>
 
-          <div class="card" data-test="1" style="background-image: linear-gradient(to bottom, rgb(6, 177, 220), rgb(91, 57, 111));">
-            <span style="margin:auto 0; font-size:30px; color:rgb(203, 198, 108);">Range</span>
+          <div class="card" data-test="1" style="background-image: linear-gradient(to bottom, #c1bf78, #c2c054, #d4d123);">
+            <span style="margin:auto 0; font-size:30px; color:#454208;">Range</span>
             <img class="button-show" src="Picture/flicker.png" style="height:40px; width:40px;"><br>
 
             <div class="box-show hidden">
@@ -57,8 +57,8 @@
             </div>
           </div>
 
-          <div class="card" data-test="1" style="background-image: linear-gradient(to bottom, rgb(48, 120, 138), rgb(91, 57, 111));">
-            <span style="margin:auto 0; font-size:30px; color:rgb(223, 228, 139);">Heap</span>
+          <div class="card" data-test="1" style="background-image: linear-gradient(to bottom, #bc6f79, #b63d4d, #d3102a);">
+            <span style="margin:auto 0; font-size:30px; color:#f8d5d9;">Heap</span>
             <img class="button-show" src="Picture/flicker.png" style="height:40px; width:40px;"><br>
 
             <div class="box-show hidden">
@@ -69,8 +69,8 @@
             </div>
           </div>
 
-          <div class="card" data-test="1" style="background-image: linear-gradient(to bottom, rgb(255, 73, 137), rgb(231, 70, 249));">
-            <span style="margin:auto 0; font-size:30px; color:rgb(70, 78, 96);">Stack</span>
+          <div class="card" data-test="1" style="background-image: linear-gradient(to bottom, #8d7272, #bda4a4, #c4b2b2);">
+            <span style="margin:auto 0; font-size:30px; color:#313131;">Stack</span>
             <img class="button-show" src="Picture/flicker.png" style="height:40px; width:40px;"><br>
 
             <div class="box-show hidden">
@@ -82,8 +82,8 @@
             </div>
           </div>
 
-          <div class="card" data-test="1" style="background-image: linear-gradient(to bottom, rgb(104, 250, 221), rgb(54, 140, 180));">
-            <span style="margin:auto 0; font-size:30px; color:rgb(138, 86, 166);">Queue</span>
+          <div class="card" data-test="1" style="background-image: linear-gradient(to bottom, #fee3b9, #e7c287, #efc580);">
+            <span style="margin:auto 0; font-size:30px; color:#361f05;">Queue</span>
             <img class="button-show" src="Picture/flicker.png" style="height:40px; width:40px;"><br>
 
             <div class="box-show hidden">
@@ -94,8 +94,8 @@
             </div>
           </div>
 
-          <div class="card" data-test="1" style="background-image: linear-gradient(to bottom, rgb(149, 134, 158), rgb(91, 57, 111));">
-            <span style="margin:auto 0; font-size:30px; color:rgb(124, 208, 219);">Array List</span>
+          <div class="card" data-test="1" style="background-image: linear-gradient(to bottom, #9aaab7, #95b2ca, #9ad2ff);">
+            <span style="margin:auto 0; font-size:30px; color:#e5f1f6;">Array List</span>
             <img class="button-show" src="Picture/flicker.png" style="height:40px; width:40px;"><br>
 
             <div class="box-show hidden">
@@ -106,8 +106,8 @@
             </div>
           </div>
 
-          <div class="card" data-test="1" style="background-image: linear-gradient(to bottom, rgb(97, 114, 171), rgb(183, 110, 180));">
-            <span style="margin:auto 0; font-size:30px; color:rgb(0, 243, 117);">Pair</span>
+          <div class="card" data-test="1" style="background-image: linear-gradient(to bottom, #5d68c2, #3748cd, #283cd1);">
+            <span style="margin:auto 0; font-size:30px; color:#cee0fe;">Pair</span>
             <img class="button-show" src="Picture/flicker.png" style="height:40px; width:40px;"><br>
 
             <div class="box-show hidden">
@@ -118,8 +118,8 @@
             </div>
           </div>
 
-          <div class="card" data-test="1" style="background-image: linear-gradient(to bottom, rgb(194, 107, 198), rgb(183, 110, 180));">
-            <span style="margin:auto 0; font-size:30px; color:rgb(241, 233, 111);">Set</span>
+          <div class="card" data-test="1" style="background-image: linear-gradient(to bottom, #bf596f, #b52e4c, #80011c);">
+            <span style="margin:auto 0; font-size:30px; color:#f6d4db;">Set</span>
             <img class="button-show" src="Picture/flicker.png" style="height:40px; width:40px;"><br>
 
             <div class="box-show hidden">
@@ -132,8 +132,8 @@
             </div>
           </div>
 
-          <div class="card" data-test="1" style="background-image: linear-gradient(to bottom, rgb(220, 157, 140), rgb(134, 108, 149));">
-            <span style="margin:auto 0; font-size:30px; color:rgb(252, 79, 79);">Map</span>
+          <div class="card" data-test="1" style="background-image: linear-gradient(to bottom, #6f6361, #544b49, #211d1c);">
+            <span style="margin:auto 0; font-size:30px; color:#ebe7e8;">Map</span>
             <img class="button-show" src="Picture/flicker.png" style="height:40px; width:40px;"><br>
 
             <div class="box-show hidden">
@@ -146,8 +146,8 @@
             </div>
           </div>
 
-          <div class="card" data-test="1" style="background-image: linear-gradient(to bottom, rgb(245, 179, 80), rgb(243, 113, 198));">
-            <span style="margin:auto 0; font-size:30px; color:rgb(0, 127, 254);">Hash Set</span>
+          <div class="card" data-test="1" style="background-image: linear-gradient(to bottom, #43ca70, #23a24d, #00892e);">
+            <span style="margin:auto 0; font-size:30px; color:#c6fcd5;">Hash Set</span>
             <img class="button-show" src="Picture/flicker.png" style="height:40px; width:40px;"><br>
 
             <div class="box-show hidden">
@@ -160,8 +160,8 @@
             </div>
           </div>
 
-          <div class="card" data-test="1" style="background-image: linear-gradient(to bottom, rgb(67, 255, 164), rgb(202, 104, 251));">
-            <span style="margin:auto 0; font-size:30px; color:rgb(251, 255, 8);">Hash Map</span>
+          <div class="card" data-test="1" style="background-image: linear-gradient(to bottom, #f9b9d1, #ff96bc, #fd72a5);">
+            <span style="margin:auto 0; font-size:30px; color:#5d3041;">Hash Map</span>
             <img class="button-show" src="Picture/flicker.png" style="height:40px; width:40px;"><br>
 
             <div class="box-show hidden">
@@ -651,7 +651,7 @@
         </div>
 
         <div class="tab page hidden" style="width:50%;">
-          <p style="font-size:40px; color:rgb(134, 42, 61);">Documentation : Map</p>
+          <p style="font-size:40px; color:rgb(165, 61, 82);">Documentation : Map</p>
           <span class="char btnchar back-page">[Back]</span> <a class="char btnchar" href="https://github.com/Ca-Len-Men/DataStructure/blob/Object/map.h" target="_blank">[Source]</a>
 
           <div class="card" style="background-color:#2d2d30;">
