--- a/DSA Document/index.html
+++ b/DSA Document/index.html
@@ -118,8 +118,8 @@
             </div>
           </div>
 
-          <div class="card" data-test="1" style="background-image: linear-gradient(to bottom, #bf596f, #b52e4c, #80011c);">
-            <span style="margin:auto 0; font-size:30px; color:#f6d4db;">Set</span>
+          <div class="card" data-test="1" style="background-image: linear-gradient(to bottom, #7d9ebf, #5481af, #225485);">
+            <span style="margin:auto 0; font-size:30px; color:#d8f4f2;">Set</span>
             <img class="button-show" src="Picture/flicker.png" style="height:40px; width:40px;"><br>
 
             <div class="box-show hidden">
